hard-gists/cd72af254e50e01ae763/run.log
=== Docker Run Log for cd72af254e50e01ae763 ===
Started at: Mi 29. Okt 20:18:37 CET 2025

[2025-10-29 20:18:38] START: Running container for cd72af254e50e01ae763
[2025-10-29 20:18:38] SUCCESS: Container acc9c1b2f87ba9768126fe73bd6d5683f351392e0b0b0150eb6dfdf2a71faa6c started for cd72af254e50e01ae763
=== Container logs for cd72af254e50e01ae763 ===
  File "/snippet.py", line 76
    print rdata
    ^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for cd72af254e50e01ae763 ===
[2025-10-29 20:18:40] INFO: Container acc9c1b2f87ba9768126fe73bd6d5683f351392e0b0b0150eb6dfdf2a71faa6c has stopped
